--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,10 +9,18 @@
   </head>
   <body>
     <button id="load">GO!</button>
+    <button id="all">See all!</button>
+
+    <div id="profile">
+
+    </div>
+
+    <div id="trips"></div>
+
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js">
     </script>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
   </body>
 </html>
