comments and such

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- <button id="load" class="button">GO</button> -->
-    <button id="all" class="button large-2 column">See all</button>
+    <button id="all" class="button large-2 column">See all possible trips</button>
 
     <!-- <div id="modal-launcher"> -->
       <!-- <a href="#" id="modal-launcher">Launcher</a> -->
