better display of the reservation confirmation

--- a/index.html
+++ b/index.html
@@ -44,17 +44,18 @@
           </section>
           <input type="hidden" id="theTripsID" name="theTripsID"></input>
 
-          <section class="button">
-            <button type="reserve" id="reserveSpot">Reserve</button>
+          <section>
+            <button class="large-2 columns button"type="reserve" id="reserveSpot">Reserve</button>
+            <div id="message"></div>
           </section>
 
         </form>
 
-        <button id="modal-close" class="button">Close</button>
+        <button id="modal-close" class="button large-2 columns">Close</button>
       </div>
 
     <!-- </div> -->
-    <div id="message"></div>
+
     <table id="modal-launcher" class="row table">
       <th>Please travel with Meeeee(dium)</th>
       <tr id="trips" class="large-12 columns">
